--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "node-sass": "^4.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
