--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "todo",
+  "name": "todo-application",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "node-sass": "^4.13.1",
+    "jsonwebtoken": "8.5.1",
+    "node-sass": "^4.12.0",
     "react": "16.12.0",
+    "react-cookies": "0.1.1",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-hook-form": "4.9.8",
+    "react-jsonschema-form": "1.8.0",
+    "react-router-dom": "5.0.1",
+    "react-scripts": "3.0.1",
+    "superagent": "5.2.2",
+    "uuid": "3.3.3"
   },
   "devDependencies": {
     "typescript": "3.3.3"
